Bug 479843 - Modified entries with bold/italic font don't update after save
Summary: Modified entries with bold/italic font don't update after save
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.5.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-15 13:23 UTC by Robby Stephenson
Modified: 2024-01-16 13:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.5.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2024-01-15 13:23:20 UTC
The title font updates, but not the other columns
Comment 1 Robby Stephenson 2024-01-15 13:31:08 UTC
Git commit 5e035e356cc5da0bc603a5214fbb785192f47c02 by Robby Stephenson.
Committed on 15/01/2024 at 14:31.
Pushed by rstephenson into branch '3.5'.

Emit dataChanged for entire model row when updating save status
FIXED-IN: 3.5.4

M  +4    -0    ChangeLog
M  +3    -2    src/models/entrymodel.cpp

https://invent.kde.org/office/tellico/-/commit/5e035e356cc5da0bc603a5214fbb785192f47c02
Comment 2 Robby Stephenson 2024-01-16 13:19:10 UTC
Git commit e3429501fa55f5e9d78550f6021fe60fd6a9ac87 by Robby Stephenson.
Committed on 16/01/2024 at 14:19.
Pushed by rstephenson into branch 'master'.

Emit dataChanged for entire model row when updating save status
FIXED-IN: 3.5.4

M  +4    -0    ChangeLog
M  +3    -2    src/models/entrymodel.cpp

https://invent.kde.org/office/tellico/-/commit/e3429501fa55f5e9d78550f6021fe60fd6a9ac87