Emit dataChanged for entire model row when updating save status

BUG: 479843
FIXED-IN: 3.5.4